edit application error outline

--- a/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.html
+++ b/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.html
@@ -30,7 +30,15 @@
         formControlName="hasOtherParcelsInCommunity"
         (change)="onHasOtherParcelsInCommunityChange($event)"
       >
-        <mat-button-toggle value="true">Yes</mat-button-toggle>
+        <mat-button-toggle
+          value="true"
+          [ngClass]="{
+            'error-outline':
+              hasOtherParcelsInCommunity.invalid &&
+              (hasOtherParcelsInCommunity.dirty || hasOtherParcelsInCommunity.touched)
+          }"
+          >Yes</mat-button-toggle
+        >
         <mat-button-toggle value="false">No</mat-button-toggle>
       </mat-button-toggle-group>
       <div
