--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
@@ -21,7 +21,8 @@
 </div>
 <div
   *ngIf="!uploadedFiles.length || allowMultiple"
-  class="desktop-file-drag-drop"
+  class=""
+  [ngClass]="{ 'desktop-file-drag-drop': true, 'error-outline': isRequired && showErrors && !uploadedFiles.length }"
   dragDropFile
   [disabled]="disabled"
   (files)="filesDropped($event)"
