--- a/portal-frontend/src/app/features/review-application/review-resolution/review-resolution.component.html
+++ b/portal-frontend/src/app/features/review-application/review-resolution/review-resolution.component.html
@@ -28,9 +28,17 @@
       >
         <label for="is-consistent">Resolution for Application to Proceed to the ALC</label>
         <mat-button-toggle-group class="input" id="is-consistent" formControlName="isAuthorized">
-          <mat-button-toggle value="true">Authorize</mat-button-toggle>
-          <mat-button-toggle value="false">Refuse to Authorize</mat-button-toggle>
+          <mat-button-toggle value="true" [ngClass]="{ 'error-outline': isAuthorized.invalid && showErrors }"
+            >Authorize</mat-button-toggle
+          >
+          <mat-button-toggle value="false" [ngClass]="{ 'error-outline': isAuthorized.invalid && showErrors }"
+            >Refuse to Authorize</mat-button-toggle
+          >
         </mat-button-toggle-group>
+        <div *ngIf="isAuthorized.invalid && showErrors" class="field-error">
+          <mat-icon>warning</mat-icon>
+          <div *ngIf="isAuthorized.errors?.['required']">This field is required</div>
+        </div>
       </div>
     </div>
   </form>
