--- a/alcs-frontend/src/app/features/board/dialogs/planning-review/planning-review-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/planning-review/planning-review-dialog.component.html
@@ -14,20 +14,31 @@
   </div>
   <div class="split">
     <span class="region">{{ planningReview.localGovernment.name }} - {{ planningReview.region.label }} Region</span>
-    <button
-      [matTooltip]="planningReview.card.highPriority ? 'Remove Priority' : 'Add Priority'"
-      class="toggle-priority"
-      (click)="onTogglePriority()"
-      mat-icon-button
-    >
-      <div
-        class="priority"
-        [ngClass]="{
-          'filled-priority': planningReview.card.highPriority,
-          'empty-priority': !planningReview.card.highPriority
-        }"
-      ></div>
-    </button>
+    <div class="right">
+      <button
+        *ngIf="canArchive"
+        matTooltip="Archive Card"
+        class="toggle-priority"
+        (click)="onArchiveCard()"
+        mat-icon-button
+      >
+        <mat-icon>archive</mat-icon>
+      </button>
+      <button
+        [matTooltip]="planningReview.card.highPriority ? 'Remove Priority' : 'Add Priority'"
+        class="toggle-priority"
+        (click)="onTogglePriority()"
+        mat-icon-button
+      >
+        <div
+          class="priority"
+          [ngClass]="{
+            'filled-priority': planningReview.card.highPriority,
+            'empty-priority': !planningReview.card.highPriority
+          }"
+        ></div>
+      </button>
+    </div>
   </div>
 </div>
 <mat-dialog-content>
