--- a/alcs-frontend/src/app/features/board/dialogs/modification/modification-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/modification/modification-dialog.component.html
@@ -43,7 +43,8 @@
         <mat-icon>archive</mat-icon>
       </button>
       <button
-        [matTooltip]="modification.card.highPriority ? 'Remove Priority' : 'Add Priority'"
+        *ngIf='card'
+        [matTooltip]="card.highPriority ? 'Remove Priority' : 'Add Priority'"
         class="toggle-priority"
         (click)="onTogglePriority()"
         mat-icon-button
@@ -51,8 +52,8 @@
         <div
           class="priority"
           [ngClass]="{
-            'filled-priority': modification.card.highPriority,
-            'empty-priority': !modification.card.highPriority
+            'filled-priority': card.highPriority,
+            'empty-priority': !card.highPriority
           }"
         ></div>
       </button>
@@ -98,10 +99,10 @@
       </ng-template>
     </ng-select>
   </div>
-  <div class="subtasks-wrapper">
-    <app-subtasks [cardUuid]="modification.card.uuid"></app-subtasks>
+  <div *ngIf='card' class="subtasks-wrapper">
+    <app-subtasks [cardUuid]="card.uuid"></app-subtasks>
   </div>
-  <div class="card-comments-wrapper">
-    <app-comments [notificationTitle]="cardTitle" [cardUuid]="modification.card.uuid"></app-comments>
+  <div *ngIf='card' class="card-comments-wrapper">
+    <app-comments [notificationTitle]="cardTitle" [cardUuid]="card.uuid"></app-comments>
   </div>
 </mat-dialog-content>
