do not show confirmation if there are no other parcels

--- a/portal-frontend/src/app/features/edit-application/other-parcels/other-parcel-confirmation-dialog/other-parcel-confirmation-dialog.component.html
+++ b/portal-frontend/src/app/features/edit-application/other-parcels/other-parcel-confirmation-dialog/other-parcel-confirmation-dialog.component.html
@@ -9,7 +9,7 @@
 </ng-template>
 
 <div mat-dialog-title>
-  <h4>Discard Other parcels in the Community</h4>
+  <h4>Discard Other Parcels in the Community</h4>
 </div>
 
 <div mat-dialog-content class="content">
