--- a/portal-frontend/src/app/features/application-details/parcel/parcel.component.html
+++ b/portal-frontend/src/app/features/application-details/parcel/parcel.component.html
@@ -110,10 +110,10 @@
         <app-no-data [showRequired]="showErrors" *ngIf="parcel.owners.length === 0"></app-no-data>
       </div>
     </div>
-    <div class="subheading2 grid-1">
+    <div class="subheading2 grid-1" *ngIf="parcelType !== PARCEL_TYPES.OTHER">
       I confirm that the owner information provided above matches the current Certificate of Title
     </div>
-    <div class="grid-double">
+    <div class="grid-double" *ngIf="parcelType !== PARCEL_TYPES.OTHER">
       <span *ngIf="parcel.isConfirmedByApplicant">Yes</span>
       <app-no-data [showRequired]="showErrors" *ngIf="!parcel.isConfirmedByApplicant"></app-no-data>
     </div>
