--- a/portal-frontend/src/app/features/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/application-details/application-details.component.html
@@ -73,7 +73,7 @@
 <section>
   <h3>4. Government</h3>
   <div *ngIf="application" class="review-table">
-    <div class="subheading2 grid-1">Local of First Nation Government</div>
+    <div class="subheading2 grid-1">Local or First Nation Government</div>
     <div class="grid-double">
       {{ localGovernment?.name }}
       <app-no-data [showRequired]="showErrors" *ngIf="!localGovernment"></app-no-data>
