Add document descriptions to ALCS
* Send from Portal for optional documents

--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.html
@@ -130,7 +130,7 @@
           {{ file.type }}
         </div>
         <div class="grid-2">
-          {{ file.type }}
+          {{ file.description }}
         </div>
         <div class="grid-3">
           <a (click)="openFile(file.uuid)">{{ file.fileName }}</a>
