Submit Refused to Forward Application to ALCS
* If app is not authorized disable menu items and show tooltip

--- a/alcs-frontend/src/app/features/application/application.component.html
+++ b/alcs-frontend/src/app/features/application/application.component.html
@@ -9,10 +9,19 @@
       <div class="nav">
         <div *ngFor="let route of childRoutes" class="nav-link">
           <div
+            *ngIf='route.requiresAuthorization ? isAuthorized : true'
             [routerLink]="route.path ? route.path : './'"
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }"
             class="nav-item"
+          >
+            <mat-icon>{{ route.icon }}</mat-icon>
+            {{ route.menuTitle }}
+          </div>
+          <div
+            *ngIf='route.requiresAuthorization ? !isAuthorized : false'
+            class="nav-item disabled"
+            matTooltip='Application not subject to ALC Review'
           >
             <mat-icon>{{ route.icon }}</mat-icon>
             {{ route.menuTitle }}
