--- a/portal-frontend/src/app/features/edit-application/edit-application.component.html
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.html
@@ -69,12 +69,19 @@
   </cdk-step>
   <cdk-step label="Proposal">
     <ng-container *ngTemplateOutlet="header"></ng-container>
-    <div *ngIf="cdkStepper.selectedIndex === editAppSteps.Proposal">
+    <div *ngIf="application && cdkStepper.selectedIndex === editAppSteps.Proposal">
       <app-nfu-proposal
+        *ngIf="application.typeCode === 'NFUP'"
         [$application]="$application"
         [showErrors]="showValidationErrors"
         (navigateToStep)="onBeforeSwitchStep($event)"
       ></app-nfu-proposal>
+      <app-tur-proposal
+        *ngIf="application.typeCode === 'TURP'"
+        [$application]="$application"
+        [showErrors]="showValidationErrors"
+        (navigateToStep)="onBeforeSwitchStep($event)"
+      ></app-tur-proposal>
     </div>
   </cdk-step>
   <cdk-step label="Upload Attachments">
