--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/nfu-details/nfu-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/nfu-details/nfu-details.component.html
@@ -23,9 +23,9 @@
     the property, including gravel for construction.
   </div>
   <div class="grid-double">
-    <span *ngIf="application.nfuWillImportFill !== null">{{ application.nfuWillImportFill ? 'Yes' : 'No' }}</span>
+    <span *ngIf="application.nfuWillImportFill !== null">{{ application.nfuWillImportFill === 'true' ? 'Yes' : 'No' }}</span>
   </div>
-  <ng-container *ngIf="application.nfuWillImportFill === true">
+  <ng-container *ngIf="application.nfuWillImportFill === 'true'">
     <div class="full-width">
       <hr />
     </div>
